implemented auth with next auto || implemented cart functionality ||

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "firebase": "^9.9.3",
+    "cross-env": "^7.0.3",
+    "firebase": "^9.9.4",
     "firebase-admin": "^11.0.1",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
